Posodobil PDF, 1.1.1 Pregled še manjka

--- a/report-template/rgti.tex
+++ b/report-template/rgti.tex
@@ -16,19 +16,19 @@
 \begin{document}
 \title{Navodila in osnutek prispevka za končno poročilo pri predmetu Računalniška grafika in tehnologija iger}
 
-\author{Ciril Bohak$^{1}$, Matija Marolt$^{2}$} % use ^1, ^2 for author(s) from different institutions
+\author{Aljaž Kozina, Denis Kotnik, Kristian Žarn, Klemen Červ}
 
-\affiliation{	$^{1}$Univerza v Ljubljani, Fakulteta za računalništvo in informatiko \\ 
-				$^{2}$Univerza v Ljubljani, Fakulteta za računalništvo in informatiko }
+\affiliation{	Univerza v Ljubljani, Fakulteta za računalništvo in informatiko }
 
-\email{E-pošta: ciril.bohak@fri.uni-lj.si}
+\email{E-pošta: kozinc@gmail.com, \\
+ denis.kotnik@gmail.com, \\kristian.zarn@gmail.com, \\klemen.cerv@gmail.com}
 
 \maketitle
 
 \selectlanguage{slovene}
 
 \begin{abstract}{Abstract}
-Na tem mestu v največ 200 besedah podajte predstavitev svoje igre. Na kratko predstavite idejo, žanr in {upo\-ra\-blje\-ne} tehnologije.
+V tretjeosebni pustolovščini vodiš ladjo, polno zaklada mimo nasprotnikov do pristanišča, medtem ko se trudiš, da bi izgubil čim manj zaklada.
 \end{abstract}
 
 % -- Zgolj navodila - to v končni verziji dokumenta odstranite.
@@ -37,12 +37,12 @@ Ta dokument naj vam služi kot osnova za pisanje poročila o seminarju pri predm
 
 \begin{figure}[!htb]
     \begin{center}
-        \includegraphics[width=\columnwidth]{wolfenstein.jpg}
-        \caption{Kratek opis slike.} \label{fig:slika}
+        \includegraphics[width=\columnwidth]{Overboard.jpg}
+        \caption{Navdih za našo igro.} \label{fig:slika}
     \end{center}
 \end{figure}
 
-Pri pisanju poročila vključujte tudi reference na vire s katerimi ste si pomagali pri izdelavi seminarja. To so lahko pisni viri v obliki knjig \cite{Foley1994}, člankov \cite{Meng2015} ali drugih virov, ki jih dodajte med reference, spletne vire pa navajajte v nogi\footnote{\url{https://en.wikipedia.org/wiki/Computer_graphics}}.
+Pri pisanju poročila vključujte tudi reference na vire s katerimi ste si pomagali pri izdelavi seminarja. To so lahko pisni viri v obliki knjig \cite{dirksen2013learning}, člankov \cite{wiki:Overboard!} ali drugih virov, ki jih dodajte med reference, spletne vire pa navajajte v nogi \footnote{\url{https://en.wikipedia.org/wiki/Computer_graphics}}.
 
 Pri izdelavi igre se omejite na izdelavo enega samega nivoja igre, ki pa ga dodelajte in izpilite kolikor vam do\-pu\-šča predviden čas.
 
@@ -64,7 +64,7 @@ Podpoglavje naj vsebuje podrobnejšo predstavitev sveta, s katerim interaktira u
 \subsubsection{Ozadje}
 Opišite kako je predstavljeno ozadje sveta v igri - predeli s katerimi uporabnik ne interaktira a še vedno predstavljajo del sveta v igri (npr. nebo v ozadju, oddaljeni predmeti ipd.)
 
-Nebo v ozadju bo predvidoma prikazano s Skyboxom, ...
+Ozadje sveta vsebuje nebo in kopno. Za nebo bodo predvidoma uporabljene javno dostopne teksture, za kopno pa predvidoma teksture in dodatni predmeti.
 
 \subsubsection{Ključne lokacije}
 Izpostavite ključne lokacije v svetu, ki igrajo pomembno vlogo za uporabnika. Navedite zakaj so pomembne, na kakšne način bodo predstavljene (npr. domači tabor, nasprotnikov tabor, nahajališča dobrin  ipd.).
