--- a/report-template/references.bib
+++ b/report-template/references.bib
@@ -1,19 +1,17 @@
-@book{Foley1994,
-	 author = {Foley, James D. and Phillips, Richard L. and Hughes, John F. and Dam, Andries van and Feiner, Steven K.},
-	 title = {Introduction to Computer Graphics},
-	 year = {1994},
-	 isbn = {0201609215},
-	 publisher = {Addison-Wesley Longman Publishing Co., Inc.},
-	 address = {Boston, MA, USA}
-}
+@misc{ wiki:Overboard!,
+   author = "Wikipedia",
+   title = "{Overboard!} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2015",
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Overboard!&oldid=679064544}},
+   note = "[Online; accessed 10-November-2015]"
+ }
 
-@article{meng2015,
-    author = {Johannes Meng and Marios Papas and Ralf Habel and Carsten Dachsbacher and Steve Marschner and Markus Gross and Wojciech Jarosz},
-    title = {Multi-Scale Modeling and Rendering of Granular Materials},
-    journal = {ACM Transactions on Graphics (Proceedings of SIGGRAPH)},
-    volume = {34},
-    number = {4},
-    year = {2015},
-    month = jul,
-    keywords = {physically based rendering, granular media, discrete random media}
+@book{dirksen2013learning,
+  title={Learning Three.js: The JavaScript 3D Library for WebGL},
+  author={Dirksen, J.},
+  isbn={9781782166290},
+  series={Community experience distilled},
+  url={https://books.google.si/books?id=6TVeAQAAQBAJ},
+  year={2013},
+  publisher={Packt Publishing}
 }
