porocilo popravljeno Denis

--- a/report-template/rgti.tex
+++ b/report-template/rgti.tex
@@ -45,10 +45,10 @@ Naša igra je tretjeosebna pustolovščina, navdihnjena z igro Overboard!\cite{w
 \end{figure}
 
 \subsection{Opis sveta}
-\textit{Na tem mestu podajte grob opis sveta v igri, ki ga podrobenje definirate v sledečih podpoglavjih. Prav tako definirajte v kakšnem stilu bo izdelan svet (npr. realističen, stiliziran, risankast, ipd.). Opredelite tudi ali se bodo osebki v svetu pomikali v eni, dveh ali treh dimenzijah.\\
-}
+Igra cilja na \textit{morsko, piratsko in pustolovsko} vzdušje, kater svet je izrisan v realističn 3D grafiki. Igralec se pomika po morski površini.
+
 \subsubsection{Pregled}
-...
+Svet je sestavljen iz morja in kopnega. Slednje bomo poskusili do neke mere zgenerirano naključno v obliki labirinta. Prav tako naključna naj bi bile lokacije pristanišč, zakladov in nasplotnikov. Igralec poskuša zbrati zaklad, se ogniti nasprotnikom in uspešno pristati v pristanišče.
 
 \subsubsection{Ozadje}
 Ozadje sveta vsebuje nebo in kopno. Za nebo bodo predvidoma uporabljene javno dostopne teksture, za kopno pa predvidoma teksture in dodatni predmeti.
