porocilo popravljeno Denis

--- a/report-template/rgti.tex
+++ b/report-template/rgti.tex
@@ -45,7 +45,7 @@ Naša igra je tretjeosebna pustolovščina, navdihnjena z igro Overboard!\cite{w
 \end{figure}
 
 \subsection{Opis sveta}
-Igra cilja na \textit{morsko, piratsko in pustolovsko} vzdušje, kater svet je izrisan v realističn 3D grafiki. Igralec se pomika po morski površini.
+Igra cilja na \textit{morsko, piratsko in pustolovsko} vzdušje, kater svet je izrisan v realistični 3D grafiki. Igralec se pomika po morski površini.
 
 \subsubsection{Pregled}
 Svet je sestavljen iz morja in kopnega. Slednje bomo poskusili do neke mere zgenerirano naključno v obliki labirinta. Prav tako naključna naj bi bile lokacije pristanišč, zakladov in nasplotnikov. Igralec poskuša zbrati zaklad, se ogniti nasprotnikom in uspešno pristati v pristanišče.
